@@ -3,6 +3,7 @@ version 1.9.3, in progress
 - Add help text for "dpanel"
 - GUI graphs: allow option of replacing the original graph
   with a zoomed view
+- lrvar function: allow vector argument in place of series
 - Fix bug: ensure that the main window gets updated when
   series are deleted via the console
 - Fix bug: don't show an excessively long list of series in
